Four_September_2021_CKA_Recap/6.Security/deployment_with_dockercreds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - image: myprivateregistry.com:5000/nginx:alpine 
          name: nginx
      imagePullSecrets:
        - name: private-reg-cred
