Four_September_2021_CKA_Recap/6.Security/docker-login-creds-in-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: private-registry.io/apps/internal-app
    name: nginx
  imagePullSecrets:
    - name: regcred
