Four_September_2021_CKA_Recap/6.Security/pod_with_security_context_containerlevel.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: webpod
  name: webpod
spec:
  containers:
  - command: ["sleep", "100"]
    image: ubuntu
    name: webpod
    securityContext:
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
