Four_September_2021_CKA_Recap/6.Security/pod_with_serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
  serviceAccountName: dashboard-sa
